# hdr-merge-master-rust

./: .gitignore  Cargo.toml  OPENCV_SETUP.md  README_release.md  RELEASE_CHECKLIST.md  batch_example.json  build.rs  release.bat  release.ps1  tests.md  time-test.md
.github/workflows/: rust.yml
src/: cli.rs  config.rs  main.rs  scan_folder.rs
src/process/: ev_calc.rs  external_blender.rs  external_luminance.rs  mod.rs  opencv_align.rs  opencv_merge.rs  opencv_tonemap.rs  processor.rs  rust_merge.rs
src/ui/: app.rs  clear_profiles_confirm_dialog.rs  edit_profile_dialog.rs  mod.rs  profile_manager_dialog.rs  setup_dialog.rs
