[package]
name = "hdr-merge-master"
version = "1.0.0"
description = "HDR Merge Master - Desktop Application"
authors = ["Savva Zakahrov"]
license = "GPLv3-or-later"
edition = "2024"

[dependencies]
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
kamadak-exif = "0.5"
chrono = "0.4"
image = "0.25"
# OpenCV with photo module for AlignMTB
opencv = { version = "0.97.2", features = ["photo"] }
# Parallel processing
rayon = "1.11"
