[package]
name = "hdr-merge-master"
version = "1.0.0"
description = "HDR Merge Master - Desktop Application for merging bracketed HDR images"
authors = ["Savva Zakahrov"]
license = "GPLv3-or-later"
edition = "2024"
default-run = "hdr-merge-master"
repository = "https://github.com/hdr-merge-master/hdr-merge-master"
homepage = "https://github.com/hdr-merge-master/hdr-merge-master"
keywords = ["hdr", "image-processing", "photography", "merge", "blender"]
categories = ["multimedia::images", "multimedia::video", "graphics"]

# Exclude large files from package
exclude = [
    "target/**",
    "release/**",
    "*.zip",
    "*.log",
]

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
winres = "0.1"

[dependencies]
# GUI framework
iced = { version = "0.14.0", features = ["tokio"] }
# File dialogs
rfd = "0.15"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# EXIF reading
kamadak-exif = "0.5"
chrono = "0.4"
# Image processing
image = "0.25"
# OpenCV with photo module for AlignMTB
opencv = { version = "0.97.2", features = ["photo"] }
# Parallel processing
rayon = "1.11"
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Directory paths
dirs = "5.0"
# EXR file format support (pure Rust)
exr = "1.7"
# Open URL in browser
open = "5.3"
